# zotero-semantic-search

./: .dockerignore  .gitignore  CITATION.cff  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  entrypoint.sh  extractors.py  index.html  indexer.py  launcher.py  main.py  ollama.py  pyproject.toml
.claude/commands/: release.md
.github/workflows/: desktop-build.yml  docker-publish.yml
desktop/: electron-builder.yml  package-lock.json  package.json
desktop/src/: main.js  preload.js
desktop/src/renderer/: index.html  renderer.js
docs/: architecture-desktop.md  architecture-search.md
templates/: index.html
