[project]
authors = [{name = "Liam Bindle", email = "liambindle@gmail.com"}]
dependencies = []
name = "local-semantic-search"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"
cxx-compiler = "*"        # needed to compile chroma-hnswlib
# Web framework
fastapi = ">=0.111"
uvicorn = ">=0.30"
jinja2 = ">=3.1"
# Document extraction — prefer conda so system libs are co-managed
lxml = ">=5.0"            # HTML / ODT / EPUB (C parser, handles malformed HTML)
python-docx = ">=1.1"     # DOCX / DOC
python-pptx = ">=1.0"     # PPTX / PPT
openpyxl = ">=3.1"        # XLSX
pillow = ">=10.3,<11"    # pin to satisfy fastembed==0.3.6 (<11 required)

[tool.pixi.pypi-dependencies]
# Not yet on conda-forge
chromadb = "==0.5.3"
fastembed = "==0.3.6"
pymupdf = "==1.24.5"      # PDF — pip wheel bundles libmupdf (conda version requires separate mupdf package)
striprtf = ">=0.0.26"     # RTF (pure Python, tiny)

[tool.pixi.activation.env]
ANONYMIZED_TELEMETRY = "false"
HF_HUB_OFFLINE = "1"
TRANSFORMERS_OFFLINE = "1"
OLLAMA_NO_ANALYTICS = "1"
DO_NOT_TRACK = "1"

[tool.pixi.tasks]
dev = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
app = "python launcher.py"
